--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,16 +1,20 @@
 server:
   port: 9010
   max-http-header-size: 10000000
+  tomcat:
+    basedir: /tmp/tomcat
   custom:
     httpPort: 9020
   servlet:
     session:
       timeout: 1800
   ssl:
-    key-store: tomcatkeystore.keystore
-    key-store-password: 123qwe
+    key-store: classpath:server.keystore
+    key-store-password: changeit
     key-store-type: JKS
     key-alias: tomcat
+
+spring:
   redis:
     database: 1           # Redis服务器数据库
     host: ${redis.host:127.0.0.1}   # Redis服务器地址
@@ -22,13 +26,11 @@ server:
         max-wait: -1      # 连接池最大阻塞等待时间（使用负值表示没有限制）
         max-idle: 10      # 连接池中的最大空闲连接
         min-idle: 0       # 连接池中的最小空闲连接
-spring:
   thymeleaf:
     prefix: classpath:/templates/
   servlet:
     multipart:
       max-file-size: 50MB
       max-request-size: 50MB
-      location: /data/upload_tmp
 
 
